Update for 1.18.2